new QC and driver workflows

--- a/conf/modules/driver_annotation.config
+++ b/conf/modules/driver_annotation.config
@@ -1,28 +1,44 @@
 // FIXME ANNOTATE_DRIVER not used anymore
-//  process{
-//     withName: 'ANNOTATE_DRIVER' {
-//         memory = '5 GB'
-//         time = '10 min'
-//         errorStrategy = 'finish'
-//         publishDir = [
-//                 [
-//                     mode: params.publish_dir_mode,
-//                     path: { "${params.outdir}/DriverAnnotation/${meta.dataset}/${meta.patient}/${meta.tumour_sample}/"},
-//                     pattern: "*{rds}"
-//                 ]
-//             ]    
-//     }
-// }
-
-process{
-     withName: 'DNDSCV' {
-         memory = '10 GB'
-         time = '10 min'
+ process{
+     withName: 'ANNOTATE_DRIVER' {
+         memory = '15 GB'
+         time = '15 min'
          errorStrategy = 'finish'
          publishDir = [
                  [
                      mode: params.publish_dir_mode,
-                     path: { "${params.outdir}/DriverAnnotation/DNDSCV/${meta.dataset}/${meta.patient}/${meta.tumour_sample}/"},
+                     path: { "${params.outdir}/driver_annotation/annotate_driver/${meta.dataset}/${meta.patient}/${meta.tumour_sample}/"},
+                     pattern: "*{rds}"
+                 ]
+             ]    
+     }
+ }
+
+ process{
+    withName: 'JOIN_ANNOTATION' {
+         memory = '15 GB'
+         time = '15 min'
+         errorStrategy = 'finish'
+         publishDir = [
+                 [
+                     mode: params.publish_dir_mode,
+                     path: { "${params.outdir}/driver_annotation/join_annotation/${meta.dataset}/${meta.patient}/${meta.tumour_sample}/"},
+                     pattern: "*{rds}"
+                 ]
+             ]    
+     }
+
+ }
+
+process{
+     withName: 'DNDSCV' {
+         memory = '15 GB'
+         time = '15 min'
+         errorStrategy = 'ignore'
+         publishDir = [
+                 [
+                     mode: params.publish_dir_mode,
+                     path: { "${params.outdir}/driver_annotation/DNDSCV/${meta.dataset}/"},
                      pattern: "*{rds}"
                  ]
              ]    
@@ -30,12 +46,12 @@ process{
 
      withName: 'BUILD_REFERENCE' {
          memory = '10 GB'
-         time = '10 min'
-         errorStrategy = 'finish'
+         time = '20 min'
+         errorStrategy = 'ignore'
          publishDir = [
                  [
                      mode: params.publish_dir_mode,
-                     path: { "${params.outdir}/DriverAnnotation/BUILD_REFERENCE/"},
+                     path: { "${params.outdir}/driver_annotation/BUILD_REFERENCE/"},
                      pattern: "*{rds}"
                  ]
              ]    
