removing "remove_tail" parameter

--- a/nextflow.config
+++ b/nextflow.config
@@ -15,7 +15,7 @@ params {
   fasta = null
 
   tools = "mobster,viber,pyclone-vi,sparsesignatures,sigprofiler"  // Default Subclonal deconvolution & Signature deconvolution tools
-  remove_tail = "all"                 // VAF deconvolution - general
+  // remove_tail = "all"                 // VAF deconvolution - general
   publish_dir_mode = "copy"
   publish_dir_mode_genome_sigprofiler = "move"
 
