--- a/conf/modules/pyclonevi.config
+++ b/conf/modules/pyclonevi.config
@@ -14,8 +14,8 @@ process {
                 "n_cluster": params.pyclonevi_n_cluster,
                 "density": params.pyclonevi_density,
                 "n_grid_point": params.pyclonevi_n_grid_point,
-                "n_restarts": params.pyclonevi_n_restarts,
-                "remove_tail": params.remove_tail 
+                "n_restarts": params.pyclonevi_n_restarts
+                // "remove_tail": params.remove_tail 
             ]
         }
     }
