--- a/conf/modules/viber.config
+++ b/conf/modules/viber.config
@@ -23,8 +23,8 @@ process {
                 "binomial_cutoff" : params.viber_binomial_cutoff,
                 "dimensions_cutoff" : params.viber_dimensions_cutoff,
                 "pi_cutoff" : params.viber_pi_cutoff,
-                "re_assign" : params.viber_re_assign,
-                "remove_tail": params.remove_tail
+                "re_assign" : params.viber_re_assign
+                // "remove_tail": params.remove_tail
             ]
         }
     }
