add filter flag + minor CNAqc & driver_annot

--- a/nextflow.config
+++ b/nextflow.config
@@ -19,6 +19,8 @@ params {
   publish_dir_mode = "copy"
   publish_dir_mode_genome_sigprofiler = "move"
 
+  filter = null
+
   // VEP
   download_cache_vep = null
   vep_cache = null
