--- a/orfeo_cdslab.config
+++ b/orfeo_cdslab.config
@@ -11,6 +11,8 @@ params {
   //fasta = "/orfeo/LTS/CDSLab/LT_storage/ref_genomes/BGI/GCA_000001405.14_GRCh37.p13_no_alt_analysis_set.fna"
 
   genome = "GRCh37" //"GRCh38"
+  filter = false
+
 
   // if download_cache_vep is false then use vep_cache
   download_cache_vep = false
