--- a/nextflow.config
+++ b/nextflow.config
@@ -153,9 +153,9 @@ params {
   genome_installed_path = null
 
   // Mutational Signature Deconvolution - SigProfiler
-  sigprofiler_reference_genome = "GRCh37"
+  // sigprofiler_reference_genome = "GRCh37"
   sigprofiler_exome = "False"
-  sigprofiler_volume = "signature_deconvolution/Sigprofiler/genome/"
+  sigprofiler_volume = "signature_deconvolution/Sigprofiler/genome"
   sigprofiler_input_type = "matrix"
   sigprofiler_context_type = "96,DINUC,ID"
   sigprofiler_minimum_signatures = "1"
@@ -178,6 +178,16 @@ params {
   sigprofiler_collapse_to_SBS96 = "True"
   sigprofiler_get_all_signature_matrices = "True"
   sigprofiler_export_probabilities = "True"
+  sigprofiler_bed_file = null
+  sigprofiler_chrom_based = "False"
+  sigprofiler_plot = "False"
+  sigprofiler_tsb_stat = "False"
+  sigprofiler_seqInfo = "True"
+  sigprofiler_cushion = "100"
+  sigprofiler_precision = "single"
+  sigprofiler_gpu = "False"
+  sigprofiler_batch_size = "1"
+  sigprofiler_allow_stability_drop = "False"
 
   // TINC
   tinc_vaf_range_tumour = "c(0, 0.7)"
