--- a/nextflow.config
+++ b/nextflow.config
@@ -178,11 +178,11 @@ params {
   sigprofiler_collapse_to_SBS96 = "True"
   sigprofiler_get_all_signature_matrices = "True"
   sigprofiler_export_probabilities = "True"
-  sigprofiler_bed_file = null
+  sigprofiler_bed_file = "None"
   sigprofiler_chrom_based = "False"
   sigprofiler_plot = "False"
   sigprofiler_tsb_stat = "False"
-  sigprofiler_seqInfo = "True"
+  sigprofiler_seqInfo = "False"
   sigprofiler_cushion = "100"
   sigprofiler_precision = "single"
   sigprofiler_gpu = "False"
