SigProfiler config updates

--- a/conf/params.config
+++ b/conf/params.config
@@ -157,6 +157,17 @@ params {
   sigprofiler_collapse_to_SBS96 = "True"
   sigprofiler_get_all_signature_matrices = "True"
   sigprofiler_export_probabilities = "True"
+  sigprofiler_bed_file = "None"
+  sigprofiler_chrom_based = "False"
+  sigprofiler_plot = "False"
+  sigprofiler_tsb_stat = "False"
+  sigprofiler_seqInfo = "True"
+  sigprofiler_cushion = "100"
+  sigprofiler_volume = "./"
+  sigprofiler_precision = "single"
+  sigprofiler_gpu = "False"
+  sigprofiler_batch_size = "1"
+  sigprofiler_allow_stability_drop = "False"
   
   // TINC
   tinc_vaf_range_tumour = "c(0, 0.7)"
