--- a/nextflow.config
+++ b/nextflow.config
@@ -155,7 +155,7 @@ params {
   // Mutational Signature Deconvolution - SigProfiler
   // sigprofiler_reference_genome = "GRCh37"
   sigprofiler_exome = "False"
-  sigprofiler_volume = "signature_deconvolution/Sigprofiler/genome"
+  sigprofiler_volume = "./"
   sigprofiler_input_type = "matrix"
   sigprofiler_context_type = "96,DINUC,ID"
   sigprofiler_minimum_signatures = "1"
