adding --wrirable-tmpfs for proper Sigprofiler functioning

--- a/conf/modules/sigprofiler.config
+++ b/conf/modules/sigprofiler.config
@@ -17,8 +17,7 @@ process {
     withName: 'SIGPROFILER' {
 	    memory = { check_max( 100.GB * task.attempt, 'memory' ) }
         time = { check_max( 12.h * task.attempt, 'time' ) }
-        // singularity.envWhitelist = ["SINGULARITY_TMPDIR"]
-        // singularity.runOptions = '--bind /orfeo:/orfeo --bind $SINGULARITY_TMPDIR:/tmp --writable-tmpfs'
+        singularity.runOptions = '--writable-tmpfs'
         cpus = { check_max( 12 * task.attempt, 'cpus' ) }
         maxForks = 20
         errorStrategy = 'retry'
