--- a/orfeo_cdslab.config
+++ b/orfeo_cdslab.config
@@ -10,7 +10,7 @@ params {
   fasta = "/orfeo/LTS/CDSLab/LT_storage/ref_genomes/Homo_sapiens/GATK/GRCh38/Sequence/WholeGenomeFasta/Homo_sapiens_assembly38.fasta"
   //fasta = "/orfeo/LTS/CDSLab/LT_storage/ref_genomes/BGI/GCA_000001405.14_GRCh37.p13_no_alt_analysis_set.fna"
 
-  genome = "GRCh37" //"GRCh38"
+  genome = "GRCh38" //"GRCh37"
   filter = false
 
 
@@ -18,19 +18,19 @@ params {
   download_cache_vep = false
   vep_cache = "/orfeo/LTS/CDSLab/LT_storage/ref_genomes/VEP"
 
-  vep_genome = "GRCh37" //GRCh38
-  vep_cache_version = "111" //"110"
+  vep_genome = "GRCh38" //GRCh37
+  vep_cache_version = "110" //"111"
   vep_species = "Homo_sapiens"
 
   drivers_table = "https://raw.githubusercontent.com/nicola-calonaci/test-datasets/evoverse/data/DRIVER_ANNOTATION/ANNOTATE_DRIVER/Compendium_Cancer_Genes.tsv"
-  //dndscv_refcds_rda = "https://raw.githubusercontent.com/nicola-calonaci/test-datasets/evoverse/data/DRIVER_ANNOTATION/DNDSCV/RefCDS_human_GRCh38_GencodeV18_recommended.rda"
-  dndscv_refcds_rda = "https://raw.githubusercontent.com/nicola-calonaci/test-datasets/evoverse/data/DRIVER_ANNOTATION/DNDSCV/RefCDS_human_GRCh37_dNdScv.0.1.0.rda"
+  dndscv_refcds_rda = "https://raw.githubusercontent.com/nicola-calonaci/test-datasets/evoverse/data/DRIVER_ANNOTATION/DNDSCV/RefCDS_human_GRCh38_GencodeV18_recommended.rda"
+  //dndscv_refcds_rda = "https://raw.githubusercontent.com/nicola-calonaci/test-datasets/evoverse/data/DRIVER_ANNOTATION/DNDSCV/RefCDS_human_GRCh37_dNdScv.0.1.0.rda"
 }
 
 singularity {
     enabled = true
     singularity.envWhitelist = "SINGULARITY_TMPDIR"
-    singularity.runOptions = '--bind /orfeo:/orfeo --contain --workdir \${SINGULARITY_TMPDIR}'
+    singularity.runOptions = '--bind /orfeo:/orfeo --contain --workdir \${SINGULARITY_TMPDIR} --witable-tmpfs'
     singularity.cacheDir = "$NXF_SINGULARITY_CACHEDIR"
 }
 
