Fix typo in config file

--- a/orfeo_cdslab.config
+++ b/orfeo_cdslab.config
@@ -30,7 +30,7 @@ params {
 singularity {
     enabled = true
     singularity.envWhitelist = "SINGULARITY_TMPDIR"
-    singularity.runOptions = '--bind /orfeo:/orfeo --contain --workdir \${SINGULARITY_TMPDIR} --witable-tmpfs'
+    singularity.runOptions = '--bind /orfeo:/orfeo --contain --workdir \${SINGULARITY_TMPDIR} --writable-tmpfs'
     singularity.cacheDir = "$NXF_SINGULARITY_CACHEDIR"
 }
 
