update config files

--- a/conf/test.config
+++ b/conf/test.config
@@ -4,22 +4,51 @@
  * -------------------------------------------------
  * Defines bundled input files and everything required
  * to run a fast and simple test. Use as follows:
- *   nextflow run nf-core/evoverse -profile test,<docker/singularity>
+ *   nextflow run nf-core/tumourevo -profile test,<docker/singularity>
  */
  
-// Questo va girato dall'user con --profile test, singularity
-
 params {
   config_profile_name = 'Test profile'
   config_profile_description = 'Minimal test dataset to check pipeline function'
   
   // Limit resources so that this can run on GitHub Actions
   max_cpus = 2
-  max_memory = 6.GB
-  max_time = 48.h
+  max_memory = 20.GB
+  max_time = 4.h
 
   // Input data
   // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
   // TODO nf-core: Give any required params for the test so that command line flags are not needed
-  input = "$baseDir/test_input.csv"
+ 
+  input = "https://github.com/nicola-calonaci/test-datasets/raw/evoverse/data/chr17_test_samplesheet.csv"
+  fasta = "https://raw.githubusercontent.com/nicola-calonaci/test-datasets/evoverse/data/REF/FASTA/chr17_genome.fasta"
+  genome = "GRCh38"
+  filter = false
+  
+  drivers_table = "https://raw.githubusercontent.com/nicola-calonaci/test-datasets/evoverse/data/DRIVER_ANNOTATION/ANNOTATE_DRIVER/Compendium_Cancer_Genes.tsv"
+
+  download_cache_vep = false
+  vep_cache = "https://raw.githubusercontent.com/nicola-calonaci/test-datasets/evoverse/data/REF/VEP/vep.tar.gz"
+
+  vep_genome = "GRCh38" 
+  vep_cache_version = "110" 
+  vep_species = "Homo_sapiens"
+
+  sparsesignatures_K = "2:3"
+  sparsesignatures_nmf_runs = "3"
+  sparsesignatures_iterations = "10"
+  sparsesignatures_max_iterations_lasso = "100"
+  sparsesignatures_cross_validation_repetitions = "10"
+  sparsesignatures_cross_validation_iterations = "5"
+  sparsesignatures_lambda_values_alpha = "c(0.00, 0.01)"
+  sparsesignatures_lambda_values_beta = "c(0.01, 0.05)"
+ 
+  tools = "mobster,viber,pyclone-vi,sparsesignatures"
+ 
+  sigprofiler_maximum_signatures = "2"
+  sigprofiler_nmf_replicates = "2"
+  sigprofiler_min_nmf_iterations = "1"
+  sigprofiler_max_nmf_iterations = "3"
+  sigprofiler_nmf_test_conv = "3"
+
 }
