--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 /*
  * -------------------------------------------------
- *  nf-core/evoverse Nextflow config file
+ *  nf-core/tumourevo Nextflow config file
  * -------------------------------------------------
  * Default config options for all environments.
  */
@@ -15,7 +15,6 @@ params {
   fasta = null
 
   tools = "mobster,viber,pyclone-vi,sparsesignatures,sigprofiler"  // Default Subclonal deconvolution & Signature deconvolution tools
-  // remove_tail = "all"                 // VAF deconvolution - general
   publish_dir_mode = "copy"
   publish_dir_mode_genome_sigprofiler = "move"
 
@@ -31,31 +30,11 @@ params {
   vep_custom_args = "--everything --filter_common --per_gene --total_length --offline --format vcf"
 
   // ANNOTATE_DRIVERS
-  drivers_table = null
-  dndscv_refcds_rda = null
-  dndscv_qmis_cv = 0.1
-  dndscv_qtrunc_cv = 0.1
-  dndscv_qallsubs_cv = 0.1 
-
+  drivers_table = "https://raw.githubusercontent.com/nicola-calonaci/test-datasets/evoverse/data/DRIVER_ANNOTATION/DNDSCV/RefCDS_human_GRCh38_GencodeV18_recommended.rda"
 
   // vcf2CNAqc
   vcf_filter_mutations = "TRUE"
   
-  // SparseSig
-  bsg_hs37 = "/orfeo/LTS/CDSLab/LT_storage/shared/BS_genome/bsg_hs37d5.rds"
-
-  // MAFTOOLS
-  maftools_rmOutlier = "TRUE"
-  maftools_addStat = "NULL"
-  maftools_titvRaw = "TRUE"
-  maftools_showBarcodes = "FALSE"
-  maftools_dashboard = "TRUE"
-  maftools_top = "10"
-  maftools_minMut =  "NULL"
-  maftools_genes = "NULL"
-  maftools_altered = "FALSE"
-  maftools_removeNonMutated = "TRUE"
- 
   // CNAqc
   cnaqc_matching_strategy = "rightmost"
   cnaqc_karyotypes = "c('1:0', '1:1', '2:0', '2:1', '2:2')"
@@ -137,7 +116,7 @@ params {
   sparsesignatures_nmf_runs = "10"
   sparsesignatures_iterations = "30" 
   sparsesignatures_max_iterations_lasso = "10000"
-  sparsesignatures_num_processes = "Inf"
+  sparsesignatures_num_processes = "all"
   sparsesignatures_cross_validation_entries = "0.01"
   sparsesignatures_cross_validation_repetitions = "50"
   sparsesignatures_cross_validation_iterations = "5"
