update viber error strategy

--- a/conf/modules/viber.config
+++ b/conf/modules/viber.config
@@ -2,6 +2,7 @@ process {
     withName: 'VIBER' {
         memory='128 GB'
         time='2h'
+        errorStrategy = 'ignore'
         publishDir = [
             [
                 mode: params.publish_dir_mode,
