fixe old name evoverse to tumourevo

--- a/nextflow.config
+++ b/nextflow.config
@@ -30,7 +30,7 @@ params {
   vep_custom_args = "--everything --filter_common --per_gene --total_length --offline --format vcf"
 
   // ANNOTATE_DRIVERS
-  drivers_table = "https://raw.githubusercontent.com/nicola-calonaci/test-datasets/evoverse/data/DRIVER_ANNOTATION/DNDSCV/RefCDS_human_GRCh38_GencodeV18_recommended.rda"
+  drivers_table = "https://raw.githubusercontent.com/nicola-calonaci/test-datasets/tumourevo/data/DRIVER_ANNOTATION/DNDSCV/RefCDS_human_GRCh38_GencodeV18_recommended.rda"
 
   // vcf2CNAqc
   vcf_filter_mutations = "TRUE"
@@ -286,9 +286,9 @@ dag {
 }
 
 manifest {
-  name = 'nf-core/evoverse'
+  name = 'nf-core/tumourevo'
   author = 'Nicola Calonaci, Elena Buscaroli, Katsiaryna Davydzenka, Giorgia Gandolfi, Virginia Gazziero, Asad Sadr, Lucrezia Valeriani and Giulio Caravagna'
-  homePage = 'https://github.com/nf-core/evoverse'
+  homePage = 'https://github.com/nf-core/tumourevo'
   description = 'Analysis pipleine to model tumour clonal evolution from WGS data (driver annotation, quality control of copy number calls, subclonal and mutational signature deconvolution)'
   mainScript = 'main.nf'
   nextflowVersion = '>=19.10.0'
