add complete test + some minor

--- a/conf/modules/sparsesignatures.config
+++ b/conf/modules/sparsesignatures.config
@@ -24,8 +24,8 @@ process {
         publishDir = [
             [
                 mode: params.publish_dir_mode,
-                path: { "${params.outdir}/signature_deconvolution/${meta.id}/SparseSignatures/" },
-                pattern: "*{rds, pdf}"
+                path: { "${params.outdir}/signature_deconvolution/SparseSignatures/${meta.id}/" },
+		pattern: "*{rds,pdf}"
             ]
         ]
     }
