--- a/conf/modules/ensemblvep.config
+++ b/conf/modules/ensemblvep.config
@@ -19,7 +19,7 @@ process {
             publishDir = [
                 [
                     mode: params.publish_dir_mode,
-                    path: { "${params.outdir}/vep_cache"}
+                    path: { "${params.outdir}/references/VEP/"}
                 ]
             ]
         }
@@ -34,6 +34,19 @@ process {
                 mode: params.publish_dir_mode,
                 path: { "${params.outdir}/variant_annotation/vep/${meta.dataset}/${meta.patient}/${meta.tumour_sample}/" },
                 pattern: "*{tbi,csi,yml}"
+            ]
+        ]
+    }
+}
+
+process {
+    withName: 'UNTAR'{
+        memory = '2 GB'
+        time = '1h'
+        publishDir = [
+            [
+                mode: params.publish_dir_mode,
+                path: { "${params.outdir}/references/VEP/" }
             ]
         ]
     }
