--- a/nextflow.config
+++ b/nextflow.config
@@ -145,7 +145,7 @@ params {
   sigprofiler_cpu = "-1"
   sigprofiler_stability = "0.8"
   sigprofiler_min_stability = "0.2"
-  sigprofiler_combined_stability = "1.0"
+  sigprofiler_combined_stability = "1"
   sigprofiler_cosmic_version = "3.4"
   sigprofiler_make_decomposition_plots = "True"
   sigprofiler_collapse_to_SBS96 = "True"
@@ -172,7 +172,7 @@ params {
 
 
   // Boilerplate options
-  name = false
+  //name = false
   email = false
   email_on_fail = false
   plaintext_email = false
@@ -187,12 +187,6 @@ params {
   config_profile_description = false
   config_profile_contact = false
   config_profile_url = false
-
-  // Defaults only, expecting to be overwritten
-  max_memory = 128.GB
-  max_cpus = 16
-  max_time = 240.h
-
     
   // Boilerplate options
   outdir                       = null
