minor in test config

--- a/nextflow.config
+++ b/nextflow.config
@@ -19,7 +19,7 @@ params {
     publish_dir_mode = "copy"
     publish_dir_mode_genome_sigprofiler = "move"
 
-    filter = null
+    filter = true
 
     // VEP
     download_cache_vep = null
@@ -31,7 +31,7 @@ params {
     vep_custom_args = "--everything --filter_common --per_gene --total_length --offline --format vcf"
 
     // ANNOTATE_DRIVERS
-    drivers_table = "https://raw.githubusercontent.com/nicola-calonaci/test-datasets/tumourevo/data/DRIVER_ANNOTATION/DNDSCV/RefCDS_human_GRCh38_GencodeV18_recommended.rda"
+    drivers_table = "https://raw.githubusercontent.com/nf-core/test-datasets/refs/heads/tumourevo/data/DRIVER_ANNOTATION/ANNOTATE_DRIVER/Compendium_Cancer_Genes.tsv"
 
     // vcf2CNAqc
     vcf_filter_mutations = "TRUE"
