--- a/conf/test.config
+++ b/conf/test.config
@@ -26,17 +26,17 @@ params {
 // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
 // TODO nf-core: Give any required params for the test so that command line flags are not needed
 
-    input = "https://github.com/nf-core/test-datasets/blob/tumourevo/data/test_samplesheet.csv"
+    input = "https://raw.githubusercontent.com/nf-core/test-datasets/refs/heads/tumourevo/data/test_samplesheet.csv"
 
     // Genome references
     genome = "GRCh38"
-    fasta = "https://github.com/nf-core/test-datasets/tree/tumourevo/data/REF/FASTA/chr17_genome.fasta"
-    filter = false
+    fasta = "https://raw.githubusercontent.com/nf-core/test-datasets/refs/heads/tumourevo/data/REF/FASTA/chr17_genome.fasta"
+    filter = true
 
-    drivers_table = "https://github.com/nf-core/test-datasets/blob/tumourevo/data/DRIVER_ANNOTATION/ANNOTATE_DRIVER/Compendium_Cancer_Genes.tsv"
+    drivers_table = "https://raw.githubusercontent.com/nf-core/test-datasets/refs/heads/tumourevo/data/DRIVER_ANNOTATION/ANNOTATE_DRIVER/Compendium_Cancer_Genes.tsv"
 
     download_cache_vep = false
-    vep_cache = "https://github.com/nf-core/test-datasets/blob/tumourevo/data/REF/VEP/vep.tar.gz"
+    vep_cache = "https://raw.githubusercontent.com/nf-core/test-datasets/refs/heads/tumourevo/data/REF/VEP/vep.tar.gz"
 
     vep_genome = "GRCh38"
     vep_cache_version = "110"
