remove check_max, + minors

--- a/conf/modules/formatter.config
+++ b/conf/modules/formatter.config
@@ -1,7 +1,7 @@
 process {
     withName: 'CNA_PROCESSING'{
-        memory = { check_max( 20.GB * task.attempt, 'memory' ) }
-        cpus = { check_max( 4 * task.attempt, 'cpus' ) }
+        memory = '10 GB'
+        cpus = 4
         time = '30 min'
         errorStrategy = 'retry'
         publishDir = [
@@ -14,7 +14,8 @@ process {
     }
 
     withName: 'VCF_PROCESSING'{
-        memory = { check_max( 20.GB * task.attempt, 'memory' ) }
+        memory = '10 GB'
+        cpus = 4
         time = '30 min'
         errorStrategy = 'retry'
         ext.args = {[
@@ -29,7 +30,8 @@ process {
         ]
     }
     withName: 'RDS_PROCESSING'{
-        memory = { check_max( 12.GB * task.attempt, 'memory' ) }
+        memory = '10 GB'
+        cpus = 4
         time = '30 min'
         errorStrategy = 'retry'
         publishDir = [
