--- a/conf/test.config
+++ b/conf/test.config
@@ -42,6 +42,10 @@ params {
     vep_cache_version = "110"
     vep_species = "Homo_sapiens"
 
+    mobster_K = 2
+    mobster_maxIter = 100
+    mobster_samples = 2
+
     sparsesignatures_K = "2:3"
     sparsesignatures_nmf_runs = "3"
     sparsesignatures_iterations = "10"
