--- a/conf/modules/cnaqc.config
+++ b/conf/modules/cnaqc.config
@@ -1,8 +1,9 @@
 process {
     withName: 'CNAQC'{
-        memory = { check_max( 20.GB * task.attempt, 'memory' ) }
-        cpus = { check_max( 4 * task.attempt, 'cpus' ) }
-        time = { check_max( 4.h  * task.attempt, 'time'   ) }
+        memory = '20 GB'
+        cpus = 4
+        time = '30 min'
+
         errorStrategy = 'retry'
         publishDir = [
             [
@@ -36,8 +37,10 @@ process {
 
 
     withName: 'JOIN_CNAQC'{
-        memory = { check_max( 10.GB * task.attempt, 'memory' ) }
-        time = { check_max( 1.h  * task.attempt, 'time'   ) }
+        memory = '20 GB'
+        cpus = 4
+        time = '30 min'
+
         errorStrategy = 'retry'
 
         publishDir = [
