--- a/conf/test.config
+++ b/conf/test.config
@@ -42,18 +42,16 @@ params {
     vep_cache_version = "110"
     vep_species = "Homo_sapiens"
 
-    mobster_K = 2
-    mobster_maxIter = 100
-    mobster_samples = 2
+    pyclonevi_n_restarts = 50
 
     sparsesignatures_K = "2:3"
     sparsesignatures_nmf_runs = "3"
     sparsesignatures_iterations = "10"
-    sparsesignatures_max_iterations_lasso = "100"
-    sparsesignatures_cross_validation_repetitions = "10"
+    sparsesignatures_max_iterations_lasso = "80"
+    sparsesignatures_cross_validation_repetitions = "8"
     sparsesignatures_cross_validation_iterations = "5"
     sparsesignatures_lambda_values_alpha = "c(0.00, 0.01)"
     sparsesignatures_lambda_values_beta = "c(0.01, 0.05)"
 
-    tools = "mobster,viber,pyclone-vi,sparsesignatures"
+    tools = "pyclone-vi,sparsesignatures"
 }
