add ctree, TINC, joinCNAqc

--- a/conf/modules/sigprofiler.config
+++ b/conf/modules/sigprofiler.config
@@ -15,10 +15,10 @@ process {
 
 process {
     withName: 'SIGPROFILER' {
-        memory = { check_max( 100.GB * task.attempt, 'memory' ) }
-        time = { check_max( 12.h * task.attempt, 'time' ) }
+        memory = "100 GB"
+        time = "12.h"
         singularity.runOptions = '--writable-tmpfs'
-        cpus = { check_max( 12 * task.attempt, 'cpus' ) }
+        cpus = 12
         maxForks = 20
         errorStrategy = 'retry'
         ext.args = {
