--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -26,5 +26,5 @@ params {
     download_cache_vep = true
     vep_genome = "GRCh38"
     vep_cache_version = "110"
-    vep_species = "Homo_sapiens"
+    vep_species = "homo_sapiens"
 }
