uniform dir + minor updates

--- a/conf/modules/sigprofiler.config
+++ b/conf/modules/sigprofiler.config
@@ -62,7 +62,7 @@ process {
         publishDir = [
             [
                 mode: params.publish_dir_mode,
-                path: { "${params.outdir}/signature_deconvolution/${meta.id}/SigProfiler/" }
+                path: { "${params.outdir}/signature_deconvolution/SigProfiler/${meta.id}/" }
                 //pattern: "*{txt, pdf}"
             ]
         ]
