--- a/conf/modules/ensemblvep.config
+++ b/conf/modules/ensemblvep.config
@@ -6,7 +6,7 @@ process {
             [
                 mode: params.publish_dir_mode,
                 path: { "${params.outdir}/variant_annotation/vep/${meta.dataset}/${meta.patient}/${meta.tumour_sample}/" },
-                pattern: "*{vcf.gz,tab.gz,json.gz,html,yml}"
+                pattern: "*{vcf.gz,tab.gz,json.gz,html}"
             ]
         ]
     }
@@ -33,7 +33,7 @@ process {
             [
                 mode: params.publish_dir_mode,
                 path: { "${params.outdir}/variant_annotation/vep/${meta.dataset}/${meta.patient}/${meta.tumour_sample}/" },
-                pattern: "*{tbi,csi,yml}"
+                pattern: "*{tbi,csi}"
             ]
         ]
     }
