fix sigprofiler output dir + versions.yml

--- a/conf/modules/sigprofiler.config
+++ b/conf/modules/sigprofiler.config
@@ -62,8 +62,8 @@ process {
         publishDir = [
             [
                 mode: params.publish_dir_mode,
-                path: { "${params.outdir}/signature_deconvolution/SigProfiler/${meta.id}/" }
-                //pattern: "*{txt, pdf}"
+                path: { "${params.outdir}/signature_deconvolution/SigProfiler/${meta.id}/" },
+                pattern: "results/*"
             ]
         ]
     }
