updating resources labels

--- a/conf/base.config
+++ b/conf/base.config
@@ -40,7 +40,9 @@ process {
         memory = { 100.GB * task.attempt }
         time   = { 5.h   * task.attempt }
     }
-    withLabel:process_long {
+    withLabel:process_low_long {
+        cpus   = { 8     * task.attempt }
+        memory = { 12.GB * task.attempt }
         time   = { 5.h  * task.attempt }
     }
     withLabel:error_ignore {
