--- a/nextflow.config
+++ b/nextflow.config
@@ -215,7 +215,7 @@ params {
 
 // Container slug. Stable releases should specify release tag!
 // Developmental code should specify :dev
-process.container = 'nfcore/tumourevo:dev'
+process.container = 'nfcore/tumourevo:1.0.0'
 
 // Load base.config by default for all pipelines
 
@@ -348,7 +348,7 @@ includeConfig !System.getenv('NXF_OFFLINE') && params.custom_config_base ? "${pa
 
 // Load nf-core/tumourevo custom profiles from different institutions.
 // TODO nf-core: Optionally, you can add a pipeline-specific nf-core config at https://github.com/nf-core/configs
-// includeConfig !System.getenv('NXF_OFFLINE') && params.custom_config_base ? "${params.custom_config_base}/pipeline/tumourevo.config" : "/dev/null"
+includeConfig !System.getenv('NXF_OFFLINE') && params.custom_config_base ? "${params.custom_config_base}/pipeline/tumourevo.config" : "/dev/null"
 
 // Set default registry for Apptainer, Docker, Podman, Charliecloud and Singularity independent of -profile
 // Will not be used unless Apptainer / Docker / Podman / Charliecloud / Singularity are enabled
@@ -487,7 +487,7 @@ manifest {
     mainScript      = 'main.nf'
     defaultBranch   = 'master'
     nextflowVersion = '!>=24.04.2'
-    version         = '1.0dev'
+    version         = '1.0.0'
     doi             = ''
 }
 
